Fixing z-index of cube.

--- a/src/index.css
+++ b/src/index.css
@@ -129,6 +129,7 @@ header {
   height: 500px;
   margin: 0 auto;
   display: flex;
+  z-index: 2;
 }
 
 .about {
